--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -14,6 +14,7 @@
     <header><h1>Zwakheden in de Architectuur</h1></header>
 
     <article><p>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden in de architectuur van ICT-producten kan je meestal verdelen in drie lagen: 
+        <!-- lijst -->
         De fysieke laag
         De logische laag
         De toepassingslaag
