--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale veiligheid/zijpaginaIntegriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale veiligheid/zijpaginaIntegriteit.html">Lees meer</a>
+    <a href="digitale_veiligheid/zijpaginaIntegriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale_veiligheid/zijpaginaIntegriteit.html">Lees meer</a>
   </p>
  </nav>
 
@@ -102,13 +102,17 @@
     </p>
    </nav>
 
- <nav class="deelkopje_nav">
-  <a href=""></a>
- </nav>
+   <nav class="deelkopje_nav">
+    <p>
+      <a href="bedreigingen/zijpaginaZwakhedenCommunicatie.html">Zwakheden in de Communicatie</a><br>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden gebruikt worden door anderen. Door een Man-in-the-middle aanval...<a href="bedreigingen/zijpaginaZwakhedenCommunicatie.html">Lees meer</a>
+    </p>
+   </nav>
 
- <nav class="deelkopje_nav">
-  <a href=""></a>
- </nav>
+   <nav class="deelkopje_nav">
+    <p>
+      <a href="bedreigingen/zijpaginaZwakhedenGebruiker.html">Zwakheden bij de Gebruiker</a><br>Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in te breken. Dit gebeurt via 'brute force'-technieken, waarbij...<a href="bedreigingen/zijpaginaZwakhedenGebruiker.html">Lees meer</a>
+    </p>
+   </nav>
  
  <article class="koptitel"><h1 id="3ofzo">Aanvallers en verdedigers</h1></article>
 
