--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@
  
  <article class="koptitel"><h1 id="2ofzo">Bedreigingen</h1></article>
 
- <article class="kop_samenvatting"><p>
-</p></article>
+ <article class="kop_samenvatting"><p>De digitale veiligheid van gebruikers online wordt op allerlei manieren bedreigd. Aanvallers maken vooral gebruik van 3 verschillende zwakheden om toegang te krijgen tot de gegevens:</p>
+
+  <ul>
+    <li>Zwakheden in de architectuur;</li>
+    <li>Zwakheden in communicatie;</li>
+    <li>Zwakheden bij gebruikers.</li>
+  </ul>
+  
+</article>
 
  <article class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
