--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -4,7 +4,7 @@
 
     <title>Repressie_en_correctie</title>
 
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
