--- a/SQL-injecties/verdiepingsql-injecties.html
+++ b/SQL-injecties/verdiepingsql-injecties.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Verdieping SQL-injecties</h1></header>
 
     <article id="bigimage"> 
@@ -24,6 +26,8 @@
 <article></article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
