--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Preventie</h1></header>
 
     <article id="bigimage"> 
@@ -37,6 +39,8 @@
 </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
