--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Repressie en correctie</h1></header>
 
     <article id="bigimage"> 
@@ -31,6 +33,8 @@
 </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
