--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -5,7 +5,7 @@
 
     <title>Beschikbaarheid</title>
 
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
