--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Zwakheden in de Architectuur</h1></header>
 
     <article class="kop_samenvatting"><p>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden in de architectuur van ICT-producten kan je meestal verdelen in drie lagen: 
@@ -38,6 +40,8 @@
     </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
