--- a/bedreigingen/zijpaginaZwakhedenCommunicatie.html
+++ b/bedreigingen/zijpaginaZwakhedenCommunicatie.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Zwakheden in de Communicatie</h1></header>
 
     <article class="kop_samenvatting"><p>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden gebruikt worden door anderen. Door een Man-in-the-middle aanval kunnen gegevens, terwijl ze via het internet onderweg zijn, afgeluisterd worden. De informatie gaat dan vanaf apparaat A naar een apparaat van de aanvaller, die persoon kan de informatie onmiddellijk doorsturen naar de server, zodat de gebruiker niet doorheeft dat de informatie onderschept is. 
@@ -32,6 +34,8 @@
     </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
