--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Zwakheden bij de Gebruiker</h1></header>
 
     <article class="kop_samenvatting"><p>
@@ -36,6 +38,8 @@ Het beheren van verschillende wachtwoorden voor diverse websites kan lastig zijn
     </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
