--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Beschikbaarheid</h1></header>
 
     <article class="kop_samenvatting"><p>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie, zodat die niet worden kwijtgeraakt. Experts raden aan om het 3-2-1-systeem voor back-ups te gebruiken,het 3-2-1-back-upsysteem betekent drie kopieën van je gegevens: twee op verschillende opslagmedia en één op een andere locatie. Ook worden er speciale technieken gebruikt om gegevens veilig te houden, zoals het versleutelen ervan zodat alleen de juiste mensen ze kunnen lezen. Soms kunnen er problemen optreden, zoals aanvallen op websites, die ervoor zorgen dat ze even niet bereikbaar zijn. Het is belangrijk om maatregelen te nemen om deze problemen te voorkomen en ervoor te zorgen dat onze gegevens altijd veilig en beschikbaar zijn wanneer we ze nodig hebben.
@@ -31,6 +33,8 @@
     </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
