--- a/digitale_veiligheid/zijpaginaIntegriteit.html
+++ b/digitale_veiligheid/zijpaginaIntegriteit.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <div id="wrapper">
+
     <header><h1>Intergriteit</h1></header>
 
     <article class="kop_samenvatting"><p> In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en controleren van integriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles zorgen ervoor dat de informatie betrouwbaar blijft. Autoriseren betekent dat er bepaald wordt wie wat mag doen, gebaseerd op hun rol. Op school websites hebben docenten bijvoorbeeld meer rechten dan leerlingen. De authorisatie kan door de beheerder worden aangepast via file permissions. Controleren van integriteit is ervoor zorgen dat gegevens niet alleen juist zijn, maar ook ongewijzigd blijven, zodat ze veilig worden verwerkt. De gegevens moeten dan aan een paar eisen voldoen, en worden controlevragen gesteld, als ze er niet aan voldoen, kan het systeem de gebruiker meldingen sturen, de gegevens automatisch aanpassen of de gegevens niet verwerken en rapporteren. 
@@ -61,6 +63,8 @@
     </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+</div>
 
 </body>
 
