--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <div id="wrapper">
-    
+
  <header><h1>Welkom op onze website yayy!!!!</h1></header>
 
  <nav class="inhoudsopgave">
@@ -39,8 +39,7 @@
     src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
     alt=" eend"> </article>
 
- <article class="samenvatting_homepage"> <h3>Titelkopje 1</h3><p>De standaard Lorem Ipsum passage, in gebruik sinds de 16e eeuw
-  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
+ <article class="samenvatting_homepage"> <h3>Inleiding</h3><p>Door digitale technologieën is het functioneren van onze maatschappij veranderd. Het heeft ook invloed op hoe wij leven. Er ontstaan iedere dag nieuwe mogelijkheden om te werken, te ontspannen en om met elkaar contact te hebben. Er worden veel persoonlijke gegevens verzameld bij het gebruik van digitale technologieën. Zo heeft iedereen zijn eigen digitale identiteit. Helaas wordt de digitale veiligheid op allerlei manieren bedreigd. Aanvallers proberen door zwakheden in de beveiliging onze digitale gegevens te stelen. Het is net een kat- en muisspel tussen aanvallers en verdedigers. Op deze website leest u alles over digitale veiligheid, bedreigingen, aanvallers en verdedigers en wat voor maatregelen u zelf kunt nemen.</p>
 </article>
 
  <article class="koptitel"><h1 id="1ofzo">Pilaren van Digitale Beveiliging en Identiteit</h1></article>
