--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 </p></article>
 
  <article class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  src="afbeeldingen/encryption-1.jpg"
+  alt="Preventie"></article>
 
  <article class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
