--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div id="wrapper">
 
- <header><h1>Welkom op onze website yayy!!!!</h1></header>
+ <header><h1>Security, nog origineel maken</h1></header>
 
  <nav class="inhoudsopgave">
 <h1>Inhoudsopgave</h1>
