--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
   alt="Preventie"></article>
 
  <article class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  src="afbeeldingen/KSY-53-What_is_a_firewall__.jpg"
+  alt=" Detectie"></article>
 
   <article class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
