--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -17,7 +17,7 @@
 
     <article id="bigimage"> 
         <img
-          src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
+          src="../afbeeldingen/encryption-1.jpg"
           alt=" eend"> </article>
 
 <article class="kop_samenvatting">
