--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -18,7 +18,7 @@
     <article id="bigimage"> 
         <img
           src="../afbeeldingen/KSY-53-What_is_a_firewall__.jpg"
-          alt=" eend"> </article>
+          alt=" Detectie"> </article>
 
 <article class="kop_samenvatting">
     <p>hallo
