--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -18,7 +18,7 @@
     <article id="bigimage"> 
         <img
           src="../afbeeldingen/encryption-1.jpg"
-          alt=" eend"> </article>
+          alt=" Preventie"> </article>
 
 <article class="kop_samenvatting">
     <p>
