--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -18,7 +18,7 @@
     <article id="bigimage"> 
         <img
           src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
-          alt=" eend"> </article>
+          alt=" Repressie_en_correctie"> </article>
 
 <article class="kop_samenvatting">
     <p>hallo
