--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
  </nav>
 
  <nav class="deelkopje_nav"><p>
-  <a href="maatregelen/zijpaginaRepressie_en_correctie">Repressie en correctie</a><br>tekst<a href="maatregelen/zijpaginaRepressie_en_correctie">Lees meer</a>
+  <a href="maatregelen/zijpaginaRepressie_en_correctie">Repressie en correctie</a><br>Als er malware wordt aangetroffen moeten er maatregelen worden genomen, repressie. Er moet ook eventueel schade worden hersteld, correctie. Welke maatregelen nodig zijn, hangt af van de soort aanval. <a href="maatregelen/zijpaginaRepressie_en_correctie">Lees meer</a>
   </p>
  </nav>
 
