--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -17,10 +17,10 @@
 
     <article id="bigimage"> 
         <img
-          src="../afbeeldingen/encryption-1.jpg"
+          src="../afbeeldingen/Preventie.jpg"
           alt=" Preventie"> </article>
 
-<article class="kop_samenvatting">
+<article class="kop_samenvattingPreventie1">
     <p>
         Indringers maken weinig kans als de hard- en software zo min mogelijk kwetsbaarheden hebben. Daarom moeten bijvoorbeeld softwareontwikkelaars op de hoogte zijn van de manieren waarop je beveiligde software maakt. Toch moeten de juiste gebruikers wel makkelijk toegang hebben. Dan heb je een goede authenticatie nodig. Maar er moet wel alleen op de essentiële plekken toegang worden gegeven. Elke mogelijkheid om het systeem in te komen is namelijk een plek waar een zwakheid kan ontstaan.<br>
         Bij veel kleine tot middelgrote bedrijven is hun website erg inbraakgevoelig. Denk hierbij aan scholen, tandartsen, huisartsen en kinderdagverblijven. De websites van deze bedrijven verwerken wel gevoelige informatie zoals rekeningnummers of burgerservicenummers. Het is dus erg belangrijk, ook voor kleinere bedrijven, om goed te investeren in beveiliging en de onderhouding hiervan. In een kwart van de gevallen kunnen hackers namelijk vrij makkelijk bij de database. De oorzaak is vaak een verouderde software of onbeveiligde verbinding.
@@ -33,7 +33,7 @@
     </p>
 </article>
 
-<article class="kop_samenvatting">
+<article class="kop_samenvattingPreventie2">
     <p>
 
     </p>
