--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
 </p></article>
 
  <article class="plaatjes_klein"><img
-  src="afbeeldingen/encryption-1.jpg"
+  src="afbeeldingen/Preventie.jpg"
   alt="Preventie"></article>
 
  <article class="plaatjes_klein"><img
-  src="afbeeldingen/KSY-53-What_is_a_firewall__.jpg"
+  src="afbeeldingen/Detectie.jpg"
   alt=" Detectie"></article>
 
   <article class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/Repressie_en_correctie.jpg"
   alt=" Afbeelding van koe"></article>
 
   <p>
