--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -17,10 +17,10 @@
 
     <article id="bigimage"> 
         <img
-          src="https://photos.demandstudios.com/getty/article/152/213/484171235.jpg"
+          src="../afbeeldingen/Repressie_en_correctie.jpg"
           alt=" Repressie_en_correctie"> </article>
 
-<article class="kop_samenvatting">
+<article class="kop_samenvattingRepressie_en_correctie1">
     <p>Het kan voldoende zijn om alleen de malware in een netwerk te laten verwijderen door anti-malwaresoftware. Als een DDoS-aanval niet sterk genoeg is, dan is een website alleen tijdelijk trager dan normaal. En er kan overgeschakeld worden naar een back-upsysteem als een server niet meer beschikbaar is doordat er data is beschadigd, een hackpoging of malware. Het beveiligingslek moet dan zo snel mogelijk worden gedicht.
     </p>
 </article>
@@ -29,7 +29,7 @@
     <h1>Serieuzere problemen</h1>
 </article>
 
-<article class="kop_samenvatting">
+<article class="kop_samenvattingRepressie_en_correctie2">
     <p>Systemen zullen uitvallen of moeten worden uitgezet als de problemen serieuzer zijn. Zo wordt er bijvoorbeeld voorkomen dat er data wordt gestolen. In dat geval is er vaak ook financiële schade door de correctiekosten of door de uitval van de systemen. 
     </p>
 </article>
