--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 
 <head>
 
@@ -22,21 +22,31 @@
 
 <article class="kop_samenvattingPreventie1">
     <p>
-        Indringers maken weinig kans als de hard- en software zo min mogelijk kwetsbaarheden hebben. Daarom moeten bijvoorbeeld softwareontwikkelaars op de hoogte zijn van de manieren waarop je beveiligde software maakt. Toch moeten de juiste gebruikers wel makkelijk toegang hebben. Dan heb je een goede authenticatie nodig. Maar er moet wel alleen op de essentiële plekken toegang worden gegeven. Elke mogelijkheid om het systeem in te komen is namelijk een plek waar een zwakheid kan ontstaan.<br>
-        Bij veel kleine tot middelgrote bedrijven is hun website erg inbraakgevoelig. Denk hierbij aan scholen, tandartsen, huisartsen en kinderdagverblijven. De websites van deze bedrijven verwerken wel gevoelige informatie zoals rekeningnummers of burgerservicenummers. Het is dus erg belangrijk, ook voor kleinere bedrijven, om goed te investeren in beveiliging en de onderhouding hiervan. In een kwart van de gevallen kunnen hackers namelijk vrij makkelijk bij de database. De oorzaak is vaak een verouderde software of onbeveiligde verbinding.
+        Indringers maken weinig kans als de hard- en software zo min mogelijk kwetsbaarheden hebben. Daarom moeten bijvoorbeeld softwareontwikkelaars op de hoogte zijn van de manieren waarop je beveiligde software maakt. Toch moeten de juiste gebruikers wel makkelijk toegang hebben. Dan heb je een goede authenticatie nodig. Maar er moet wel alleen op de essentiële plekken toegang worden gegeven. Elke mogelijkheid om het systeem in te komen is namelijk een plek waar een zwakheid kan ontstaan.</p>
+       <p>Bij veel kleine tot middelgrote bedrijven is hun website erg inbraakgevoelig. Denk hierbij aan scholen, tandartsen, huisartsen en kinderdagverblijven. De websites van deze bedrijven verwerken wel gevoelige informatie zoals rekeningnummers of burgerservicenummers. Het is dus erg belangrijk, ook voor kleinere bedrijven, om goed te investeren in beveiliging en de onderhouding hiervan. In een kwart van de gevallen kunnen hackers namelijk vrij makkelijk bij de database. De oorzaak is vaak een verouderde software of onbeveiligde verbinding.</p>
+       <p>Als een bedrijf persoonsgegevens verwerkt, is het wettelijk verplicht om deze te beschermen door preventieve maatregelen te nemen. Dit is Europees verplicht. Verder moet het bedrijf vertellen hoe je gegevens worden beschermd. Zo kunt u als gebruiker zelf nagaan of u vindt dat uw gegevens goed genoeg worden beschermd.
     </p>
 </article>
 
 <article class="koptitel">
-    <p>
-
-    </p>
+    <h1>
+verschillende soorten beveiliging
+    </h1>
 </article>
 
 <article class="kop_samenvattingPreventie2">
     <p>
+        Een voorbeeld van een softwaresecuritymaatregel is sandboxing. Deze techniek zorgt ervoor dat een app niet zomaar toegang heeft tot andere plekken van het systeem, op het eigen geheugen en de opslag na. Een app moet eerst toestemming vragen aan het besturingssysteem om ook andere delen te mogen gebruiken. Deze techniek kunt u bijvoorbeeld zien op uw telefoon als u een app heeft gedownload. De app kan om toestemming vragen voor bijvoorbeeld de camera, microfoon, bestanden of uw locatie. In een sandbox kan een virus geen schade aanrichten.
+    </p>
+
+    <p>
+        Encryptie van gegevens is een andere belangrijke preventieve maatregel. Zo kan er worden voorkomen dat gegevens in verkeerde handen terechtkomen. U heeft dat zelf vast ook weleens gedaan, door bijvoorbeeld letters te veranderen naar een paar letters verder in het alfabet. Het vervangen van die letters noemen we een algoritme. Zo werkt encryptie. De hoeveelheid letters die je vooruit schuift, noem je de sleutel. Zonder die sleutel kan encryptie niet worden teruggezet naar de oorspronkelijke zin.<br>Er is continu een kat- en muisspel tussen de aanvallers en verdedigers. De aanvallers zoeken een manier om de originele tekst te krijgen. De verdedigers proberen dat zo goed mogelijk tegen te gaan met een zo moeilijk mogelijk algoritme. 
+    </p>
+
+    <p>
 
     </p>
+
 </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
