--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 
 <head>
 
@@ -30,10 +30,18 @@
 </article>
 
 <article class="kop_samenvattingdetectie2">
-    <p>Firewall<br>Een firewall is een systeem dat al het inkomende netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een firewall bekijkt of het verkeer afkomstig is van een betrouwbare bron en checkt alle datapakketten. Een firewall kan op een computer of netwerk. Bij een firewall wordt er gecontroleerd &quotaan de poort&quot en kan netwerkverkeer dan toegang geven of weigeren.</p>
-    <p>IDS<br>Een belangrijke aanvulling op firewalls bij netwerken is een Intrusion Detection System. Een IDS onderzoekt al het dataverkeer in een netwerk. Zo controleert het bijvoorbeeld op hackpogingen of DDoS-aanvallen. Bij een IDS wordt er binnen het netwerk gecontroleerd of alles &quotnormaal&quot verloopt op basis van statistieken. Zo kan er een ongewoon grote drukte wijzen op een aanval.</p>
-    <p>Anti-malware software<br>Anti-malware software is een derde belangrijk type detectiehulpmiddel. Deze scant het apparaat op malware en verwijdert die. In een grote database staan kenmerken over allerlei soorten malware. Met de hulp van deze gegevens kan de anti-malware software dus malware detecteren.
-        De Play Store en App Store controleren apps ook op malware en het ongeoorloofd verzamelen van informatie, voordat een app kan worden gedownload. </p>
+    <p>
+        Firewall<br>Een firewall is een systeem dat al het inkomende netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een firewall bekijkt of het verkeer afkomstig is van een betrouwbare bron en checkt alle datapakketten. Een firewall kan op een computer of netwerk. Bij een firewall wordt er gecontroleerd &quotaan de poort&quot en kan netwerkverkeer dan toegang geven of weigeren.
+    </p>
+
+    <p>
+        IDS<br>Een belangrijke aanvulling op firewalls bij netwerken is een Intrusion Detection System. Een IDS onderzoekt al het dataverkeer in een netwerk. Zo controleert het bijvoorbeeld op hackpogingen of DDoS-aanvallen. Bij een IDS wordt er binnen het netwerk gecontroleerd of alles &quotnormaal&quot verloopt op basis van statistieken. Zo kan er een ongewoon grote drukte wijzen op een aanval.
+    </p>
+
+    <p>
+        Anti-malware software<br>Anti-malware software is een derde belangrijk type detectiehulpmiddel. Deze scant het apparaat op malware en verwijdert die. In een grote database staan kenmerken over allerlei soorten malware. Met de hulp van deze gegevens kan de anti-malware software dus malware detecteren.
+        De Play Store en App Store controleren apps ook op malware en het ongeoorloofd verzamelen van informatie, voordat een app kan worden gedownload. 
+    </p>
 </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
