--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -26,16 +26,16 @@
 </article>
 
 <article class="koptitel">
-    <h1>Detectiehulpmiddelen</h1>
+    <h2>Detectiehulpmiddelen</h2>
 </article>
 
 <article class="kop_samenvattingdetectie2">
     <p>
-        Firewall<br>Een firewall is een systeem dat al het inkomende netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een firewall bekijkt of het verkeer afkomstig is van een betrouwbare bron en checkt alle datapakketten. Een firewall kan op een computer of netwerk. Bij een firewall wordt er gecontroleerd &quotaan de poort&quot en kan netwerkverkeer dan toegang geven of weigeren.
+        Firewall<br>Een firewall is een systeem dat al het inkomende netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een firewall bekijkt of het verkeer afkomstig is van een betrouwbare bron en checkt alle datapakketten. Een firewall kan op een computer of netwerk. Bij een firewall wordt er gecontroleerd &rsquo;aan de poort&rsquo; en kan netwerkverkeer dan toegang geven of weigeren.
     </p>
 
     <p>
-        IDS<br>Een belangrijke aanvulling op firewalls bij netwerken is een Intrusion Detection System. Een IDS onderzoekt al het dataverkeer in een netwerk. Zo controleert het bijvoorbeeld op hackpogingen of DDoS-aanvallen. Bij een IDS wordt er binnen het netwerk gecontroleerd of alles &quotnormaal&quot verloopt op basis van statistieken. Zo kan er een ongewoon grote drukte wijzen op een aanval.
+        IDS<br>Een belangrijke aanvulling op firewalls bij netwerken is een Intrusion Detection System. Een IDS onderzoekt al het dataverkeer in een netwerk. Zo controleert het bijvoorbeeld op hackpogingen of DDoS-aanvallen. Bij een IDS wordt er binnen het netwerk gecontroleerd of alles &rsquo;normaal&rsquo; verloopt op basis van statistieken. Zo kan er een ongewoon grote drukte wijzen op een aanval.
     </p>
 
     <p>
