--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -56,26 +56,34 @@ verschillende soorten beveiliging
     </tr>
     <tr>
       <td>Installeer updates altijd direct</td>
-      <td>Cel 4</td>
+      <td>Klik niet automatisch op &rsquo;ja&rsquo;<br>als een app om toegang vraagt tot<br>bepaalde gegevens op je smartphone</td>
     </tr>
     <tr>
         <td>Zorg voor automatische<br>vergrendeling op uw smartphone</td>
-        <td>Cel 4</td>
+        <td>Installeer anti-malwaresoftware</td>
       </tr>
       <tr>
         <td>Gebruik sterke wachtwoorden en<br>vervang ze minimaal één keer per jaar</td>
+        <td>Laat regelmatig een<br>anti-malwaresoftware scannen<br>op malware</td>
+      </tr>
+      <tr>
+        <td>Zorg voor back-ups van uw smartphone,<br>computers en belangrijkste gegevens</td>
         <td>Cel 4</td>
       </tr>
       <tr>
-        <td>Cel 3</td>
+        <td>controleer tijdens internetten<br>of u een beveiligde verbinding heeft</td>
         <td>Cel 4</td>
       </tr>
       <tr>
-        <td>Cel 3</td>
+        <td>Controleer of een website<br>geen vreemde URL heeft</td>
         <td>Cel 4</td>
       </tr>
       <tr>
-        <td>Cel 3</td>
+        <td>Download alleen apps van de Play store,<br>App store of andere betrouwbare fabrikant</td>
+        <td>Cel 4</td>
+      </tr>
+      <tr>
+        <td>Klik niet zomaar op gedeelde linkjes</td>
         <td>Cel 4</td>
       </tr>
   </table>
