--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
  <article class="koptitel"><h1 id="5ofzo">SQL-injecties</h1></article>
 
- <article class="kop_samenvatting"><p>
+ <article class="kop_samenvatting"><p>In onderhoud
 </p></article>
 
  <article class="plaatjes_klein"><img
