--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -45,7 +45,7 @@ verschillende soorten beveiliging
 
 </article>
 
-<table>
+<table class="Preventietabel">
     <tr>
         <td colspan="2">
             Wat kunt u zelf doen?</td>
@@ -68,23 +68,23 @@ verschillende soorten beveiliging
       </tr>
       <tr>
         <td>Zorg voor back-ups van uw smartphone,<br>computers en belangrijkste gegevens</td>
-        <td>Cel 4</td>
+        <td>Versleutel gegevens op een<br>externe databron, zoals een<br>externe harde schijf of USB-stick</td>
       </tr>
       <tr>
         <td>controleer tijdens internetten<br>of u een beveiligde verbinding heeft</td>
-        <td>Cel 4</td>
+        <td>wees heel voorzichtig met<br>het aansluiten van zelfgeprogrammeerde<br>apparaten op het internet</td>
       </tr>
       <tr>
         <td>Controleer of een website<br>geen vreemde URL heeft</td>
-        <td>Cel 4</td>
+        <td>Gebruik een VPN</td>
       </tr>
       <tr>
         <td>Download alleen apps van de Play store,<br>App store of andere betrouwbare fabrikant</td>
-        <td>Cel 4</td>
+        <td>Zet tweestapsverificatie aan</td>
       </tr>
       <tr>
         <td>Klik niet zomaar op gedeelde linkjes</td>
-        <td>Cel 4</td>
+        <td>Wacht een dag met het klikken<br>op linkjes in mails om<br>phishing te voorkomen</td>
       </tr>
   </table>
 
