--- a/index.html
+++ b/index.html
@@ -80,14 +80,13 @@
  
  <article class="koptitel"><h1 id="2ofzo">Bedreigingen</h1></article>
 
- <article class="kop_samenvatting"><p>De digitale veiligheid van gebruikers online wordt op allerlei manieren bedreigd. Aanvallers maken vooral gebruik van 3 verschillende zwakheden om toegang te krijgen tot de gegevens:</p>
-
+ <article class="kop_samenvatting"><p>De digitale veiligheid van gebruikers online wordt op allerlei manieren bedreigd. Aanvallers zoeken naar manieren om toegang tot gegevens te krijgen en die te gebruiken. Ze maken gebruik van de 3 verschillende soorten zwakheden:</p>
   <ul>
     <li>Zwakheden in de architectuur;</li>
     <li>Zwakheden in communicatie;</li>
     <li>Zwakheden bij gebruikers.</li>
   </ul>
-  
+  <p>Met verschilende methoden zoals encryptie, HTTPS en sterke wachtwoorden kan de gebruiker de aanvallen verdedigen.</p>
 </article>
 
  <article class="plaatjes_klein"><img
