--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Zwakheden Architectuur</title>
+    <title>Zwakheden architectuur</title>
 
     <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
 
@@ -13,7 +13,7 @@
 
     <div id="wrapper">
 
-    <header><h1>Zwakheden in de Architectuur</h1></header>
+    <header><h1>Zwakheden in de architectuur</h1></header>
 
     <article id="bigimage"> 
         <img
