--- a/bedreigingen/zijpaginaZwakhedenCommunicatie.html
+++ b/bedreigingen/zijpaginaZwakhedenCommunicatie.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Zwakheden Communicatie</title>
+    <title>Zwakheden communicatie</title>
 
     <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
 
@@ -13,7 +13,7 @@
 
     <div id="wrapper">
 
-    <header><h1>Zwakheden in de Communicatie</h1></header>
+    <header><h1>Zwakheden in de communicatie</h1></header>
 
     <article id="bigimage"> 
         <img
