--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Zwakheden Gebruiker</title>
+    <title>Zwakheden gebruiker</title>
 
     <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
 
@@ -13,7 +13,7 @@
 
     <div id="wrapper">
 
-    <header><h1>Zwakheden bij de Gebruiker</h1></header>
+    <header><h1>Zwakheden bij de gebruiker</h1></header>
 
     <article id="bigimage"> 
         <img
