--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
  <nav class="inhoudsopgave">
 <h1>Inhoudsopgave</h1>
-<p><a href="#1ofzo">Pilaren van Digitale Beveiliging en Identiteit
+<p><a href="#1ofzo">Digitale Beveiliging en identiteit
   </a></p>
 
   <p><a href="#2ofzo">Bedreigingen</a></p>
@@ -42,7 +42,7 @@
  <article class="samenvatting_homepage"> <h3>Inleiding</h3><p>Door digitale technologieën is het functioneren van onze maatschappij veranderd. Het heeft ook invloed op hoe wij leven. Er ontstaan iedere dag nieuwe mogelijkheden om te werken, te ontspannen en om met elkaar contact te hebben. Er worden veel persoonlijke gegevens verzameld bij het gebruik van digitale technologieën. Zo heeft iedereen zijn eigen digitale identiteit. Helaas wordt de digitale veiligheid op allerlei manieren bedreigd. Aanvallers proberen door zwakheden in de beveiliging onze digitale gegevens te stelen. Het is net een kat- en muisspel tussen aanvallers en verdedigers. Op deze website leest u alles over digitale veiligheid, bedreigingen, aanvallers en verdedigers en wat voor maatregelen u zelf kunt nemen.</p>
 </article>
 
- <article class="koptitel"><h1 id="1ofzo">Pilaren van Digitale Beveiliging en Identiteit</h1></article>
+ <article class="koptitel"><h1 id="1ofzo">Digitale Beveiliging en identiteit</h1></article>
 
  <article class="kop_samenvatting"><p>
   Digitale technologieën veranderen hoe we leven, werken en communiceren. We laten overal digitale sporen achter, zoals op sociale media, bankwebsites en schoolwebsites. Bescherming van deze gegevens is belangrijk omdat criminelen, overheden of zelfs bekenden er misbruik van kunnen maken. Digitale beveiliging draait om alle manieren voor het beschermen van je gegevens: Het gaat erom dat je informatie privé houdt, voorkomt dat die verandert zonder jouw toestemming, en altijd beschikbaar is wanneer je die nodig hebt. Iedereen, van ontwikkelaars tot individuen, is verantwoordelijk voor de beveiliging van persoonlijke gegevens door bijvoorbeeld sterke wachtwoorden te gebruiken en toegangscodes op apparaten in te stellen. Het beschermen van onze digitale gegevens gaat vooral over deze drie aspecten:
@@ -103,27 +103,30 @@
 
   <nav class="deelkopje_nav">
     <p>
-      <a href="bedreigingen/zijpaginaZwakhedenArchitectuur.html">Zwakheden in de Architectuur</a><br>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden in de architectuur van ICT-producten kan je meestal verdelen in drie lagen
+      <a href="bedreigingen/zijpaginaZwakhedenArchitectuur.html">Zwakheden in de architectuur</a><br>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden in de architectuur van ICT-producten kan je meestal verdelen in drie lagen
       ...<a href="bedreigingen/zijpaginaZwakhedenArchitectuur.html">Lees meer</a>
     </p>
    </nav>
 
    <nav class="deelkopje_nav">
     <p>
-      <a href="bedreigingen/zijpaginaZwakhedenCommunicatie.html">Zwakheden in de Communicatie</a><br>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden gebruikt worden door anderen. Door een Man-in-the-middle aanval...<a href="bedreigingen/zijpaginaZwakhedenCommunicatie.html">Lees meer</a>
+      <a href="bedreigingen/zijpaginaZwakhedenCommunicatie.html">Zwakheden in de communicatie</a><br>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden gebruikt worden door anderen. Door een Man-in-the-middle aanval...<a href="bedreigingen/zijpaginaZwakhedenCommunicatie.html">Lees meer</a>
     </p>
    </nav>
 
    <nav class="deelkopje_nav">
     <p>
-      <a href="bedreigingen/zijpaginaZwakhedenGebruiker.html">Zwakheden bij de Gebruiker</a><br>Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in te breken. Dit gebeurt via 'brute force'-technieken, waarbij...<a href="bedreigingen/zijpaginaZwakhedenGebruiker.html">Lees meer</a>
+      <a href="bedreigingen/zijpaginaZwakhedenGebruiker.html">Zwakheden bij de gebruiker</a><br>Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in te breken. Dit gebeurt via 'brute force'-technieken, waarbij...<a href="bedreigingen/zijpaginaZwakhedenGebruiker.html">Lees meer</a>
     </p>
    </nav>
  
  <article class="koptitel"><h1 id="3ofzo">Aanvallers en verdedigers</h1></article>
 
- <article class="kop_samenvatting"><p>
-</p></article>
+ <article class="kop_samenvatting">
+  <p>
+    In de digitale wereld zijn er verschillende rollen: aanvallers en verdedigers. Verdedigers proberen steeds betere beveiliging te ontwikkelen, terwijl aanvallers juist voortdurend nieuwe manieren bedenken om door deze beveiliging te breken. Vaak worden alle aanvallers 'hackers' genoemd, terwijl er ook juist ethische hackers zijn die helpen bij het verbeteren van beveiliging door de zwakheden te vinden en melden. Niet alle hackers zijn dus internetcriminelen. Overheden kunnen gebruik maken van hacken om criminelen en terroristen op te sporen. Computercriminaliteit omvat dus verschillende soorten aanvallen en verdedigers, wat alles veel complexer maakt.
+</p>
+</article>
 
  <article class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
@@ -137,9 +140,11 @@
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></article>
 
- <nav class="deelkopje_nav"><p><a href="aanvallers_en_verdedigers/aanvallersenverdedigers.html">Aanvallers en verdedigers</a>
-  
- </nav>
+  <nav class="deelkopje_nav">
+    <p>
+      <a href="aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html">Computervredebreuk en berscherming</a><br>Er zijn verschillende soorten computercriminaliteit, zoals diefstal, fraude, afpersing en hacken, wat ook bekend staat als computervredebreuk. Hacken is illegaal, zelfs als het alleen een poging is. Het hebben van tools om te hacken is ook verboden. Eigenaren moeten...<a href="aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html">Lees meer</a>
+    </p>
+   </nav>
 
  <nav class="deelkopje_nav">
   <a href=""></a>
