--- a/aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html
+++ b/aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Computervredebreuk en bescherming</title>
+    <title>Computervredebreuk</title>
 
     <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
 
@@ -13,7 +13,7 @@
 
     <div id="wrapper">
 
-    <header><h1>Computervredebreuk en bescherming</h1></header>
+    <header><h1>Computervredebreuk</h1></header>
 
     <article id="bigimage"> 
         <img
