--- a/index.html
+++ b/index.html
@@ -142,13 +142,15 @@
 
   <nav class="deelkopje_nav">
     <p>
-      <a href="aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html">Computervredebreuk en berscherming</a><br>Er zijn verschillende soorten computercriminaliteit, zoals diefstal, fraude, afpersing en hacken, wat ook bekend staat als computervredebreuk. Hacken is illegaal, zelfs als het alleen een poging is. Het hebben van tools om te hacken is ook verboden. Eigenaren moeten...<a href="aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html">Lees meer</a>
+      <a href="aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html">Computervredebreuk</a><br>Er zijn verschillende soorten computercriminaliteit, zoals diefstal, fraude, afpersing en hacken, wat ook bekend staat als computervredebreuk. Hacken is illegaal, zelfs als het alleen een poging is. Het hebben van tools om te hacken is ook verboden. Eigenaren moeten...<a href="aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html">Lees meer</a>
     </p>
    </nav>
 
- <nav class="deelkopje_nav">
-  <a href=""></a>
- </nav>
+   <nav class="deelkopje_nav">
+    <p>
+      <a href="aanvallers_en_verdedigers/zijpaginaEthischeHackers.html">Ethische hackers</a><br>Hacken wordt vaak gekoppeld aan criminele activiteiten, maar er zijn ethische hackers die juist bijdragen aan een veiliger internet. Deze ethische hackers spelen een belangrijke rol in het opsporen van beveiligingslekken en zwakheden. Wanneer ze een lek ontdekken...<a href="aanvallers_en_verdedigers/zijpaginaEthischeHackers.html">Lees meer</a>
+    </p>
+   </nav>
 
  <nav class="deelkopje_nav">
   <a href=""></a>
