Samnevatting Hoofdstuk 3 af

--- a/index.html
+++ b/index.html
@@ -152,10 +152,12 @@
     </p>
    </nav>
 
- <nav class="deelkopje_nav">
-  <a href=""></a>
- </nav>
-
+  <nav class="deelkopje_nav">
+    <p>
+      <a href="aanvallers_en_verdedigers/zijpaginaZerodays.html">Zero days</a><br>Een zeroday is een zwakke plek in een software die nog niet ontdekt is. Deze zijn enorm waardevol omdat ze kunnen worden gebruikt om te hacken. Er bestaat een hele handel in zerodays, waarbij belangrijke kwetsbaarheden voor veel geld worden verkocht, van tienduizenden...<a href="aanvallers_en_verdedigers/zijpaginaZerodays.html">Lees meer</a>
+    </p>
+   </nav>
+   
  <article class="koptitel"><h1 id="4ofzo">Maatregelen</h1></article>
 
  <article class="kop_samenvatting"><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kunt u veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden. U gaat ook wat lezen over wat u zelf kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt herkennen.
