--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -20,14 +20,14 @@
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Chocolate.jpg/640px-Chocolate.jpg"
           alt=" afbeelding choco"> </article>
 
-          <article class="kop_samenvatting"><p>
+          <article class="kop_samenvattingZwakhedenGebruiker1"><p>
             Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in te breken. Dit gebeurt via 'brute force'-technieken, waarbij aanvallers duizenden wachtwoorden per seconde proberen. Veel websites beperken dit aantal pogingen, maar door zwakheden in de architectuur zijn de aanvallers toch in staat om duizenden pogingen te doen. Om dit te voorkomen, is het belangrijk om complexe wachtwoorden te gebruiken met cijfers en speciale tekens. Unieke en langere wachtwoorden verminderen de kans op een geslaagde brute force-aanval. Daarnaast is het aangeraden om geen voor de hand liggende wachtwoorden te gebruiken, regelmatig wachtwoorden te wijzigen, unieke wachtwoorden voor verschillende accounts te hebben en voorzichtig te zijn met de ‘geheime’ vragen die gesteld worden bij een vergeten wachtwoord, want die zijn vaak gemakkelijk te raden voor criminelen.
             
         </p></article>
           
 <article class="koptitel"><p>Wachtwoordsterkte en passwordmanagers</p></article>
 
-<article class="kop_samenvatting">
+<article class="kop_samenvattingZwakhedenGebruiker2">
     Veel websites hebben specifieke eisen om de sterkte van wachtwoorden te beoordelen, zodat gegevens goed beveiligd zijn. Er zijn verschillende methoden om de sterkte van een wachtwoord te meten:
 (lijst)
     Entropie: Dit is gebaseerd op de willekeurigheid van informatie en gemeten door de formule van Claude Shannon, die de willekeurigheid van gegevens bepaalt. Hoe meer willekeurig een wachtwoord is, hoe moeilijker het is om te raden.
