--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -15,10 +15,10 @@
 
     <header><h1>Preventie</h1></header>
 
-    <article id="bigimage"> 
+    <div id="bigimage"> 
         <img
           src="../afbeeldingen/Preventie.jpg"
-          alt=" Preventie"> </article>
+          alt=" Preventie"> </div>
 
 <article class="kop_samenvattingPreventie1">
     <p>
