--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -15,10 +15,10 @@
 
     <header><h1>Repressie en correctie</h1></header>
 
-    <article id="bigimage"> 
+    <div id="bigimage"> 
         <img
           src="../afbeeldingen/Repressie_en_correctie.jpg"
-          alt=" Repressie_en_correctie"> </article>
+          alt=" Repressie_en_correctie"> </div>
 
 <article class="kop_samenvattingRepressie_en_correctie1">
     <p>
