--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -15,10 +15,10 @@
 
     <header><h1>Zwakheden bij de gebruiker</h1></header>
 
-    <article id="bigimage"> 
+    <div id="bigimage"> 
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Chocolate.jpg/640px-Chocolate.jpg"
-          alt=" afbeelding choco"> </article>
+          alt=" afbeelding choco"> </div>
 
           <article class="kop_samenvattingZwakhedenGebruiker1"><p>
             Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in te breken. Dit gebeurt via 'brute force'-technieken, waarbij aanvallers duizenden wachtwoorden per seconde proberen. Veel websites beperken dit aantal pogingen, maar door zwakheden in de architectuur zijn de aanvallers toch in staat om duizenden pogingen te doen. Om dit te voorkomen, is het belangrijk om complexe wachtwoorden te gebruiken met cijfers en speciale tekens. Unieke en langere wachtwoorden verminderen de kans op een geslaagde brute force-aanval. Daarnaast is het aangeraden om geen voor de hand liggende wachtwoorden te gebruiken, regelmatig wachtwoorden te wijzigen, unieke wachtwoorden voor verschillende accounts te hebben en voorzichtig te zijn met de ‘geheime’ vragen die gesteld worden bij een vergeten wachtwoord, want die zijn vaak gemakkelijk te raden voor criminelen.
