--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
  </nav>
 
- <article id="bigimage"> 
+ <div id="bigimage"> 
   <img
     src="afbeeldingen/Digitale_veiligheid.jpeg"
-    alt="digitale_veiligheid"> </article>
+    alt="digitale_veiligheid"> </div>
 
  <article class="samenvatting_homepage"> <h3>Inleiding</h3><p>Door digitale technologieën is het functioneren van onze maatschappij veranderd. Het heeft ook invloed op hoe wij leven. Er ontstaan iedere dag nieuwe mogelijkheden om te werken, te ontspannen en om met elkaar contact te hebben. Er worden veel persoonlijke gegevens verzameld bij het gebruik van digitale technologieën. Zo heeft iedereen zijn eigen digitale identiteit. Helaas wordt de digitale veiligheid op allerlei manieren bedreigd. Aanvallers proberen door zwakheden in de beveiliging onze digitale gegevens te stelen. Het is net een kat- en muisspel tussen aanvallers en verdedigers. Op deze website leest u alles over digitale veiligheid, bedreigingen, aanvallers en verdedigers en wat voor maatregelen u zelf kunt nemen.</p>
 </article>
@@ -48,17 +48,17 @@
   Digitale technologieën veranderen hoe we leven, werken en communiceren. We laten overal digitale sporen achter, zoals op sociale media, bankwebsites en schoolwebsites. Bescherming van deze gegevens is belangrijk omdat criminelen, overheden of zelfs bekenden er misbruik van kunnen maken. Digitale beveiliging draait om alle manieren voor het beschermen van je gegevens: Het gaat erom dat je informatie privé houdt, voorkomt dat die verandert zonder jouw toestemming, en altijd beschikbaar is wanneer je die nodig hebt. Iedereen, van ontwikkelaars tot individuen, is verantwoordelijk voor de beveiliging van persoonlijke gegevens door bijvoorbeeld sterke wachtwoorden te gebruiken en toegangscodes op apparaten in te stellen. Het beschermen van onze digitale gegevens gaat vooral over deze drie aspecten:
 </p></article>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="afbeeldingen/authenticatie1.webp"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
-  <article class="plaatjes_klein"><img
+  <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
  <nav class="deelkopje_nav">
   <p>
@@ -89,17 +89,17 @@
   <p>Met verschilende methoden zoals encryptie, HTTPS en sterke wachtwoorden kan de gebruiker de aanvallen verdedigen.</p>
 </article>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
-  <article class="plaatjes_klein"><img
+  <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
   <nav class="deelkopje_nav">
     <p>
@@ -128,17 +128,17 @@
 </p>
 </article>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
-  <article class="plaatjes_klein"><img
+  <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
   <nav class="deelkopje_nav">
     <p>
@@ -163,17 +163,17 @@
  <article class="kop_samenvatting"><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kunt u veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden. U gaat ook wat lezen over wat u zelf kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt herkennen.
 </p></article>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="afbeeldingen/Preventie.jpg"
-  alt="Preventie"></article>
+  alt="Preventie"></div>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="afbeeldingen/Detectie.jpg"
-  alt=" Detectie"></article>
+  alt=" Detectie"></div>
 
-  <article class="plaatjes_klein"><img
+  <div class="plaatjes_klein"><img
   src="afbeeldingen/Repressie_en_correctie.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
   <p>
  <nav class="deelkopje_nav"><p><a href="maatregelen/zijpaginaPreventie.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/zijpaginaPreventie.html">Lees meer</a>
@@ -200,17 +200,17 @@
  <article class="kop_samenvatting"><p>In onderhoud
 </p></article>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
- <article class="plaatjes_klein"><img
+ <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
-  <article class="plaatjes_klein"><img
+  <div class="plaatjes_klein"><img
   src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></article>
+  alt=" Afbeelding van koe"></div>
 
  <nav class="deelkopje_nav"><p><a href="SQL-injecties/verdiepingsql-injecties.html">SQL-injecties</a>
   </p>
