--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -15,10 +15,10 @@
 
     <header><h1>Detectie</h1></header>
 
-    <article id="bigimage"> 
+    <div id="bigimage"> 
         <img
           src="../afbeeldingen/Detectie.jpg"
-          alt=" Detectie"> </article>
+          alt=" Detectie"> </div>
 
 <article class="kop_samenvattingdetectie1">
     <p>Ter beveiliging wordt er bijgehouden hoe vaak er wordt geprobeerd in te loggen onder een bepaalde gebruikersnaam. Is dit te vaak, dan kan de gebruiker worden geblokkeerd. Het is nodig om allerlei gegevens van een systeem te loggen als deze methode wordt gebruikt. 
