--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -28,7 +28,7 @@
                 <li>De toepassingslaag</li>
               </ul>
            <p> Een zwakte in het systeem ontstaat wanneer er iets misgaat in een van deze lagen of bij de communicatie tussen twee lagen. Het kan een fout zijn in het ontwerp van die laag of in hoe ze met elkaar praten. Vaak had de maker die fout niet voorzien.
-            Een voorbeeld is de camera op je telefoon. Soms kan een app stiekem je camera gebruiken zonder dat je daar toestemming voor hebt gegeven. Dit soort fouten kunnen gebruikt worden door kwaadwillende mensen om je privacy te schenden.</p>
+            Een voorbeeld is de camera op je telefoon. Soms kan een app stiekem je camera gebruiken zonder dat je daar toestemming voor hebt gegeven. Dit soort fouten kunnen gebruikt worden door mensen die proberen je privacy te schenden.</p>
         </article>
 
  <article class="koptitel"><p>SQL injecties en ethische hackers</p></article>
