--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale_veiligheid/zijpaginaIntegriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Met dingen zoals checksums en IBAN-controles...<a href="digitale_veiligheid/zijpaginaIntegriteit.html">Lees meer</a>
+    <a href="digitale_veiligheid/zijpaginaIntegriteit.html">Integriteit</a><br>In de digitale wereld is het checken van wie toegang heeft tot wat en of informatie klopt superbelangrijk. Of het nu gaat om schoolcijfers of bestanden delen op je netwerk, het autoriseren en contreren van intergriteit zijn onmisbaar. Dingen zoals checksums en IBAN-controles...<a href="digitale_veiligheid/zijpaginaIntegriteit.html">Lees meer</a>
   </p>
  </nav>
 
  <nav class="deelkopje_nav">
   <p>
-    <a href="digitale_veiligheid/zijpaginaBeschikbaarheid.html">Beschikbaarheid</a><br>De beschikbaarheid van data is heel belangrijk, en moet altijd beschikbaar zijn wanneer we ze nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie...<a href="digitale_veiligheid/zijpaginaBeschikbaarheid.html">Lees meer</a>
+    <a href="digitale_veiligheid/zijpaginaBeschikbaarheid.html">Beschikbaarheid</a><br>De beschikbaarheid van data is heel belangrijk, data moet altijd beschikbaar zijn wanneer we het nodig hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van onze computers en het maken van kopieën van belangrijke informatie...<a href="digitale_veiligheid/zijpaginaBeschikbaarheid.html">Lees meer</a>
   </p>
  </nav>
  
